Fixed Footer covering content issue

--- a/web_pkae2/src/style.module.css
+++ b/web_pkae2/src/style.module.css
@@ -1,16 +1,9 @@
 body{
-    margin: 0;
+    margin-bottom: 0;
     background-color: rgb(255, 255, 255);
     color: #6c757d;
 }
 
-.header {
-    background-color: rgb(97, 74, 31);
-    font-size: 16px;
-    color: white;
-    padding: 1em;
-}
-
-.banner-image {
-    height: 500px;
+.content{
+    margin-bottom: 300px;
 }
